fix(subCategoryMenu): fix direction and wrap

--- a/styles/scss/gbarbosa.mega-menu.scss
+++ b/styles/scss/gbarbosa.mega-menu.scss
@@ -366,3 +366,8 @@
 .hidden {
   display: none;
 }
+.subCategorymenu {
+  display: flex;
+  flex-flow: column wrap;
+  max-height: 300px;
+}
